kotlin-spring/feed/src/main/kotlin/com/example/feed/global/error/response/ValidationErrorResponse.kt
package com.example.feed.global.error.response

data class ValidationErrorResponse(

        val status: Int,
        val error: HashMap<String, String?>
)
